--- a/discussion/01-git.ipynb
+++ b/discussion/01-git.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "### GitHub\n",
     "\n",
-    "The class website is hosted on [GitHub][], an online service for backing up and sharing git repos. You'll need a free GitHub account in order to submit assignments for this class.\n",
+    "The class website is hosted on [GitHub][], an online service for backing up and sharing git repos.\n",
     "\n",
     "[GitHub]: https://github.com/"
    ]
